--- a/tomcom/CSS/general_style.css
+++ b/tomcom/CSS/general_style.css
@@ -3,7 +3,7 @@
 }
 
 body {
-  font-family: Palatino Linotype;
+  font-family: 'Internet', sans-serif;
   margin: 0;
 }
 /* Style the header */
@@ -57,7 +57,7 @@ center {
 }
 
 body {
-  font-family: Palatino linotype;
+  font-family: 'Internet', sans-serif;
   margin: 0;
 }
 
