--- a/tomcom/CSS/2.css
+++ b/tomcom/CSS/2.css
@@ -7,8 +7,8 @@ body{
     justify-content:center;
     align-items:center;
     height:100vh;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background: linear-gradient(to right, #f7ae6b, #b8e6f7);
+    font-family: 'Internet', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    background: linear-gradient(to right, #f7ae6b, #61c4db);
 }
 
 .container{
@@ -40,6 +40,7 @@ body{
 }
 .form-control::placeholder{
     color:#aaa;
+    font-family: 'Internet', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 .form-control:focus{
     box-shadow:none;
