--- a/tomcom/CSS/home.css
+++ b/tomcom/CSS/home.css
@@ -18,7 +18,7 @@ main {
 /* First row (gradient hero section) */
 .logone {
     width: 100%;
-    background: linear-gradient(to right, #f7ae6b, #b8e6f7);
+    background: linear-gradient(to right, #f7ae6b, #61c4db);
     min-height: calc(100vh - 64px);
     position: relative;
     display: flex;
@@ -38,6 +38,18 @@ main {
     width: 100%;
     display: grid;
     place-items: center;
+}
+
+.hero-name {
+    grid-area: 1/1;
+    z-index: 2;
+    color: white;
+    font-size: 4rem;
+    font-weight: 700;
+    text-align: center;
+    text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.3);
+    margin-top: 15rem;
+    letter-spacing: 0.1em;
 }
 
 .overlapped-image {
