--- a/tomcom/CSS/style_galleria.css
+++ b/tomcom/CSS/style_galleria.css
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: Palatino Linotype;
+    font-family: 'Internet', sans-serif;
 }
 .container{
     width: 100%;
